; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zdb/extr_zdb.c_load_unflushed_cb.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zdb/extr_zdb.c_load_unflushed_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64, i64, i64, i64 }
%struct.TYPE_8__ = type { i64, %struct.TYPE_10__** }
%struct.TYPE_10__ = type { i32 }

@SM_ALLOC = common dso_local global i64 0, align 8
@SM_FREE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_9__*, i64, i8*)* @load_unflushed_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @load_unflushed_cb(i32* %0, %struct.TYPE_9__* %1, i64 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_9__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca %struct.TYPE_8__*, align 8
  %15 = alloca %struct.TYPE_10__*, align 8
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_9__* %1, %struct.TYPE_9__** %7, align 8
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = bitcast i8* %16 to i64*
  store i64* %17, i64** %10, align 8
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  store i64 %20, i64* %11, align 8
  %21 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  store i64 %23, i64* %12, align 8
  %24 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  store i64 %26, i64* %13, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = load i64, i64* %13, align 8
  %29 = call %struct.TYPE_8__* @vdev_lookup_top(i32* %27, i64 %28)
  store %struct.TYPE_8__* %29, %struct.TYPE_8__** %14, align 8
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %31 = call i32 @vdev_is_concrete(%struct.TYPE_8__* %30)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %34, label %33

33:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %100

34:                                               ; preds = %4
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 1
  %37 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %36, align 8
  %38 = load i64, i64* %11, align 8
  %39 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %40 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = lshr i64 %38, %41
  %43 = getelementptr inbounds %struct.TYPE_10__*, %struct.TYPE_10__** %37, i64 %42
  %44 = load %struct.TYPE_10__*, %struct.TYPE_10__** %43, align 8
  store %struct.TYPE_10__* %44, %struct.TYPE_10__** %15, align 8
  %45 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %46 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %45, i32 0, i32 3
  %47 = load i64, i64* %46, align 8
  %48 = load i64, i64* @SM_ALLOC, align 8
  %49 = icmp eq i64 %47, %48
  br i1 %49, label %56, label %50

50:                                               ; preds = %34
  %51 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %52 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %51, i32 0, i32 3
  %53 = load i64, i64* %52, align 8
  %54 = load i64, i64* @SM_FREE, align 8
  %55 = icmp eq i64 %53, %54
  br label %56

56:                                               ; preds = %50, %34
  %57 = phi i1 [ true, %34 ], [ %55, %50 ]
  %58 = zext i1 %57 to i32
  %59 = call i32 @ASSERT(i32 %58)
  %60 = load i64*, i64** %10, align 8
  %61 = load i64, i64* %60, align 8
  %62 = load i64, i64* @SM_ALLOC, align 8
  %63 = icmp eq i64 %61, %62
  br i1 %63, label %69, label %64

64:                                               ; preds = %56
  %65 = load i64*, i64** %10, align 8
  %66 = load i64, i64* %65, align 8
  %67 = load i64, i64* @SM_FREE, align 8
  %68 = icmp eq i64 %66, %67
  br label %69

69:                                               ; preds = %64, %56
  %70 = phi i1 [ true, %56 ], [ %68, %64 ]
  %71 = zext i1 %70 to i32
  %72 = call i32 @ASSERT(i32 %71)
  %73 = load i64, i64* %8, align 8
  %74 = load %struct.TYPE_10__*, %struct.TYPE_10__** %15, align 8
  %75 = call i64 @metaslab_unflushed_txg(%struct.TYPE_10__* %74)
  %76 = icmp ult i64 %73, %75
  br i1 %76, label %77, label %78

77:                                               ; preds = %69
  store i32 0, i32* %5, align 4
  br label %100

78:                                               ; preds = %69
  %79 = load i64*, i64** %10, align 8
  %80 = load i64, i64* %79, align 8
  %81 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %82 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %81, i32 0, i32 3
  %83 = load i64, i64* %82, align 8
  %84 = icmp eq i64 %80, %83
  br i1 %84, label %85, label %92

85:                                               ; preds = %78
  %86 = load %struct.TYPE_10__*, %struct.TYPE_10__** %15, align 8
  %87 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %86, i32 0, i32 0
  %88 = load i32, i32* %87, align 4
  %89 = load i64, i64* %11, align 8
  %90 = load i64, i64* %12, align 8
  %91 = call i32 @range_tree_add(i32 %88, i64 %89, i64 %90)
  br label %99

92:                                               ; preds = %78
  %93 = load %struct.TYPE_10__*, %struct.TYPE_10__** %15, align 8
  %94 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %93, i32 0, i32 0
  %95 = load i32, i32* %94, align 4
  %96 = load i64, i64* %11, align 8
  %97 = load i64, i64* %12, align 8
  %98 = call i32 @range_tree_remove(i32 %95, i64 %96, i64 %97)
  br label %99

99:                                               ; preds = %92, %85
  store i32 0, i32* %5, align 4
  br label %100

100:                                              ; preds = %99, %77, %33
  %101 = load i32, i32* %5, align 4
  ret i32 %101
}

declare dso_local %struct.TYPE_8__* @vdev_lookup_top(i32*, i64) #1

declare dso_local i32 @vdev_is_concrete(%struct.TYPE_8__*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @metaslab_unflushed_txg(%struct.TYPE_10__*) #1

declare dso_local i32 @range_tree_add(i32, i64, i64) #1

declare dso_local i32 @range_tree_remove(i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
